--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,7 @@
+* {
+  margin: 0;
+  padding: 0;
+  font-family: sans-serif;
+  font-size: 16px;
+}
 /* You can add global styles to this file, and also import other style files */
