--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -11,7 +11,7 @@
       <img src="../../../assets/money-icon.svg" width="100px" />
       <p class="first-line">Bem Vindo</p>
       <h5 class="app-title">Simulador de Empréstimo</h5>
-      <button id="start-button">Simular</button>
+      <button id="start-button" routerLink="/loan-calculator">Simular</button>
     </div>
   </div>
 </div>
