--- a/src/app/views/loan-calculator/loan-calculator.component.css
+++ b/src/app/views/loan-calculator/loan-calculator.component.css
@@ -6,40 +6,47 @@
 
 .calculator-page {
   background: linear-gradient(45deg, #b41a83 0%, #cc092f 49%, #f36279 100%);
-  height: 100vh;
+  min-height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
   font-family: Arial, sans-serif;
 }
 
-.container {
+form {
   display: flex;
+  flex-wrap: wrap;
   border-radius: 10px;
-  overflow: hidden;
   max-width: 900px;
   width: 100%;
 }
 
-.left-side {
-  color: white;
+.container {
+  display: flex;
+  flex-wrap: wrap;
+  border-radius: 10px;
+  max-width: 900px;
+  width: 100%;
 }
 
 .left-side,
 .right-side {
   flex: 1;
   padding: 20px;
+  color: white;
 }
 
-.row {
-  margin: 20px 0;
+.section {
+  margin-top: 20px;
 }
 
-h5 {
-    margin-top: 20px;
+.checkbox-group {
+  display: flex;
+  flex-wrap: wrap;
 }
 
-.btn-loan-type {
+.ckb-loan-type {
+  flex: 1;
   display: block;
   width: 100%;
   padding: 10px;
@@ -50,32 +57,53 @@ h5 {
   font-weight: 600;
   border-radius: 5px;
   cursor: pointer;
+  transition: background 0.3s;
 }
 
-.btn-loan-type:hover {
+.ckb-loan-type-checkbox {
+  display: none;
+}
+
+.ckb-loan-type:hover {
   background: #960923;
 }
 
-input[type="number"] {
+.input-container {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  margin: 20px 0;
+}
+
+input[type="number"],
+.slider,
+select {
   padding: 10px;
   border: none;
   border-radius: 6px;
   text-align: center;
-  min-width: 87px;
+  flex: 1;
   margin-right: 10px;
 }
 
 .slider {
-  margin: 10px;
-  min-width: 160px;
+  max-width: 197px;
+}
+
+
+.input-slider-loan-amount{
+  max-width: 190px;
+}
+
+.input-slider-interest-amount,
+.input-slider-loan-term {
+  max-width: 91px;
 }
 
 select {
-  padding: 10px;
   background: #960923;
-  border: none;
   color: #fff;
-  border-radius: 6px;
+  max-width: 91px;
 }
 
 .card {
@@ -84,45 +112,45 @@ select {
   padding: 20px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
   background: #e4e5e9;
+  width: 100%;
 }
 
 .card-top {
   height: 200px;
 }
 
-.small-circle-light-red {
+.small-circle {
   width: 10px;
   height: 10px;
   border-radius: 50%;
-  background: #ff6b92;
   display: inline-block;
   margin-right: 10px;
 }
 
-.small-circle-dark-red {
-  width: 10px;
-  height: 10px;
-  border-radius: 50%;
+.small-circle.light-red {
+  background: #ff6b92;
+}
+
+.small-circle.dark-red {
   background: #e4002b;
-  display: inline-block;
-  margin-right: 10px;
 }
 
 .row {
   display: flex;
   align-items: center;
+  margin: 10px 0;
 }
 
-.principal,
-.interest,
-.total {
+.info {
   flex: 1;
+  color: black;
 }
 
-.total {
-  font-weight: bold;
+.amount-total {
+  color: black;
 }
 
+.total,
 .total-amout {
   font-weight: bold;
 }
@@ -133,7 +161,6 @@ button.apply {
   height: 48px;
   padding: 10px;
   background: #fff;
-  background: #fff;
   color: #e1173f;
   box-shadow: 0px 3px 6px #00000033;
   border: none;
@@ -142,20 +169,21 @@ button.apply {
   margin: 20px 0;
   text-transform: uppercase;
   font-weight: bold;
+  transition: background 0.3s, color 0.3s;
 }
 
 button.apply:hover {
-  color: white;
   background: linear-gradient(45deg, #b41a83 0%, #cc092f 49%, #f36279 100%);
+  color: white;
 }
 
-@media (max-width: 768px) {
-  .container {
-    flex-direction: column;
-  }
-
+@media (max-width: 550px) {
   .left-side,
   .right-side {
     width: 100%;
+  }
+
+  .slider {
+    max-width: 148px;
   }
 }
