--- a/src/styles.css
+++ b/src/styles.css
@@ -4,4 +4,8 @@
   font-family: sans-serif;
   font-size: 16px;
 }
+
+.fw-bold {
+  font-weight: bold;
+}
 /* You can add global styles to this file, and also import other style files */
