Graph-bar component creation, model and all logic

--- a/src/app/views/loan-calculator/loan-calculator.component.html
+++ b/src/app/views/loan-calculator/loan-calculator.component.html
@@ -104,6 +104,9 @@
           </div>
         </div>
         <div class="card-body">
+          <div class="bar-graph">
+            <app-graph-bar [list]="graphData"></app-graph-bar>
+          </div>
           <div class="row">
             <span class="small-circle light-red"></span>
             <div class="info">Valor simulado</div>
