--- a/src/app/views/home/home.component.css
+++ b/src/app/views/home/home.component.css
@@ -1,5 +1,5 @@
 .home {
-  height: 100vh;
+  height: calc(100vh - 117px);
   background: linear-gradient(45deg, #b41a83 0%, #cc092f 49%, #f36279 100%);
   display: flex;
   justify-content: center;
@@ -84,6 +84,10 @@ button:hover {
 }
 
 @media screen and (max-width: 550px) {
+  .home {
+    height: 100vh;
+  }
+
   .container {
     width: 100%;
     height: 80%;
