About component creation

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -7,6 +7,6 @@
   </a>
   <ul class="nav-links">
     <li><a routerLink="/loan-calculator">Simulação</a></li>
-    <li><a routerLink="/loan-calculator">Sobre</a></li>
+    <li><a routerLink="/about">Sobre</a></li>
   </ul>
 </nav>
