Translate all content to english

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,12 +1,12 @@
 <nav>
   <a routerLink="/home">
     <div class="logo">
-      <div class="first-row">Simulador</div>
-      <div class="second-row">Empréstimo</div>
+      <div class="first-row">Laon</div>
+      <div class="second-row">Calculator</div>
     </div>
   </a>
   <ul class="nav-links">
-    <li><a routerLink="/loan-calculator">Simulação</a></li>
-    <li><a routerLink="/about">Sobre</a></li>
+    <li><a routerLink="/loan-calculator">Simulation</a></li>
+    <li><a routerLink="/about">About</a></li>
   </ul>
 </nav>
