--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -9,9 +9,9 @@
     </div>
     <div class="right-side">
       <img src="../../../assets/money-icon.svg" width="100px" />
-      <p class="first-line">Bem Vindo</p>
-      <h5 class="app-title">Simulador de Empréstimo</h5>
-      <button id="start-button" routerLink="/loan-calculator">Simular</button>
+      <p class="first-line">Welcome to</p>
+      <h5 class="app-title">Loan Calculator</h5>
+      <button id="start-button" routerLink="/loan-calculator">Calculate</button>
     </div>
   </div>
 </div>
