--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <nav>
   <a routerLink="/home">
     <div class="logo">
-      <div class="first-row">Laon</div>
+      <div class="first-row">Loan</div>
       <div class="second-row">Calculator</div>
     </div>
   </a>
