--- a/src/app/views/loan-calculator/loan-calculator.component.html
+++ b/src/app/views/loan-calculator/loan-calculator.component.html
@@ -17,6 +17,15 @@
             <input type="radio" formControlName="loanType" [value]="3" />
             Personal
           </div>
+          <div
+            class="error-message"
+            *ngIf="
+              loanForm.get('loanType')!.hasError('required') &&
+              loanForm.get('loanType')!.touched
+            "
+          >
+            Please select a loan type.
+          </div>
         </div>
       </div>
       <div class="section">
@@ -49,7 +58,7 @@
             class="slider"
             id="range-slider-interest-amount"
             formControlName="interestAmount"
-            [min]="0"
+            [min]="0.1"
             [max]="25"
             [step]="0.1"
             [ngModel]="this.loanForm.controls['interestAmount'].value"
@@ -97,7 +106,7 @@
           <div class="row">
             <div class="info fw-bold">
               Loan
-              <span *ngIf="loanForm.value.loanType">
+              <span *ngIf="loanForm.value.loanTypeResponse">
                 : {{ loanForm.value.loanTypeResponse | uppercase }}
               </span>
             </div>
