--- a/src/app/views/home/home.component.css
+++ b/src/app/views/home/home.component.css
@@ -1,6 +1,6 @@
 .home {
-  height: calc(100vh - 117px);
-  background: linear-gradient(45deg, #b41a83 0%, #cc092f 49%, #f36279 100%);
+  height: 100vh;
+  background: black;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -10,7 +10,7 @@
   display: flex;
   margin: 0 14px;
   padding: 0 4px;
-  background-color: #e4e5e9;
+  background-color: black;
   border-radius: 6px 6px 6px 6px;
   box-shadow: 0px 3px 6px #00000033;
 }
@@ -41,7 +41,7 @@
   font-weight: bold;
   text-transform: uppercase;
   letter-spacing: 0.5px;
-  background: linear-gradient(to right, #f36279 0%, #cc092f 10%, #b41a83 70%);
+  background: white;
   -webkit-background-clip: text;
   background-clip: text;
   color: transparent;
@@ -56,7 +56,7 @@
   font-weight: bold;
   text-transform: uppercase;
   letter-spacing: 0.5px;
-  background: linear-gradient(to right, #f36279 0%, #cc092f 10%, #b41a83 70%);
+  background: white;
   -webkit-background-clip: text;
   background-clip: text;
   color: transparent;
@@ -67,11 +67,11 @@ button {
   display: inline-flex;
   align-items: center;
   height: 48px;
-  border-radius: 24px;
+  border-radius: 14px;
   border: none;
   padding: 0 48px;
-  background: #fff;
-  color: #e1173f;
+  background: linear-gradient(45deg, #dd8c6d 0%, #E86D3C 50%, rgb(241, 95, 38) 100%);
+  color: #fff;
   cursor: pointer;
   box-shadow: 0px 3px 6px #00000033;
   text-transform: uppercase;
@@ -80,7 +80,7 @@ button {
 
 button:hover {
   color: white;
-  background: linear-gradient(45deg, #b41a83 0%, #cc092f 49%, #f36279 100%);
+  transform: scale(1.10);
 }
 
 @media screen and (max-height: 560px) {
