--- a/src/app/views/home/home.component.css
+++ b/src/app/views/home/home.component.css
@@ -70,7 +70,12 @@ button {
   border-radius: 14px;
   border: none;
   padding: 0 48px;
-  background: linear-gradient(45deg, #dd8c6d 0%, #E86D3C 50%, rgb(241, 95, 38) 100%);
+  background: linear-gradient(
+    45deg,
+    #dd8c6d 0%,
+    #e86d3c 50%,
+    rgb(241, 95, 38) 100%
+  );
   color: #fff;
   cursor: pointer;
   box-shadow: 0px 3px 6px #00000033;
@@ -80,13 +85,13 @@ button {
 
 button:hover {
   color: white;
-  transform: scale(1.10);
+  transform: scale(1.1);
 }
 
 @media screen and (max-height: 560px) {
   .container {
     height: 90%;
-  }  
+  }
 }
 
 @media screen and (max-width: 550px) {
