--- a/src/app/views/loan-calculator/loan-calculator.component.css
+++ b/src/app/views/loan-calculator/loan-calculator.component.css
@@ -5,7 +5,7 @@
 }
 
 .calculator-page {
-  background: linear-gradient(45deg, #b41a83 0%, #cc092f 49%, #f36279 100%);
+  background: black;
   min-height: calc(100vh - 117px);
   display: flex;
   justify-content: center;
@@ -52,7 +52,7 @@ form {
   padding: 10px;
   margin: 10px;
   border: none;
-  background: #f26178;
+  background: #e86d3c;
   color: #fff;
   font-weight: 600;
   border-radius: 5px;
@@ -61,7 +61,7 @@ form {
 }
 
 .ckb-loan-type:hover {
-  background: #960923;
+  transform: scale(1.1);
 }
 
 .input-container {
@@ -96,7 +96,7 @@ select {
 }
 
 select {
-  background: #960923;
+  background: #e86d3c;
   color: #fff;
   max-width: 91px;
 }
@@ -123,11 +123,11 @@ select {
 }
 
 .small-circle.light-red {
-  background: #ff6b92;
+  background: #e0997d;
 }
 
 .small-circle.dark-red {
-  background: #e4002b;
+  background: #FA5412;
 }
 
 .row {
@@ -155,11 +155,16 @@ button.apply {
   width: 100%;
   height: 48px;
   padding: 10px;
-  background: #fff;
-  color: #e1173f;
+  background: linear-gradient(
+    45deg,
+    #dd8c6d 0%,
+    #e86d3c 50%,
+    rgb(241, 95, 38) 100%
+  );
+  color: #fff;
   box-shadow: 0px 3px 6px #00000033;
   border: none;
-  border-radius: 24px;
+  border-radius: 14px;
   cursor: pointer;
   margin: 20px 0;
   text-transform: uppercase;
@@ -168,8 +173,8 @@ button.apply {
 }
 
 button.apply:hover {
-  background: linear-gradient(45deg, #b41a83 0%, #cc092f 49%, #f36279 100%);
   color: white;
+  transform: scale(1.05);
 }
 
 @media (max-width: 550px) {
