--- a/src/app/views/about/about.component.css
+++ b/src/app/views/about/about.component.css
@@ -1,5 +1,5 @@
 .about {
-  background: linear-gradient(45deg, #b41a83 0%, #cc092f 49%, #f36279 100%);
+  background: black;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -8,7 +8,7 @@
 }
 
 .container {
-  background-color: #e4e5e9;
+  background-color: rgba(230, 230, 230, 0.945);
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   padding: 20px;
@@ -22,7 +22,12 @@
   font-weight: bold;
   text-transform: uppercase;
   letter-spacing: 0.5px;
-  background: linear-gradient(to right, #f36279 0%, #cc092f 10%, #b41a83 70%);
+  background: linear-gradient(
+    45deg,
+    #e09d83 0%,
+    #e86d3c 50%,
+    #c53800 100%
+  );
   -webkit-background-clip: text;
   background-clip: text;
   color: transparent;
@@ -32,12 +37,12 @@
 .section-title {
   font-size: 20px;
   text-transform: uppercase;
-  color: #a50f3c;
+  color: #c43700;
 }
 
 .section-text {
   font-size: 16px;
-  color: #7e5c5c;
+  color: #7e6b5c;
   margin-top: 10px;
 }
 
@@ -45,7 +50,7 @@
   list-style: decimal;
   padding-left: 20px;
   margin-top: 20px;
-  color: #7e5c5c;
+  color: #7e6b5c;
 }
 
 .section-item {
@@ -72,13 +77,13 @@
 }
 
 .test {
-  color: #a50f3c !important;
+  color: #c43700 !important;
 }
 
 code {
   font-size: 14px;
   font-weight: bold;
-  color: #be5d5d;
+  color: #be895d;
 }
 
 @media screen and (max-width: 950px) {
