--- a/src/app/views/loan-calculator/loan-calculator.component.css
+++ b/src/app/views/loan-calculator/loan-calculator.component.css
@@ -52,7 +52,7 @@ form {
   padding: 10px;
   margin: 10px;
   border: none;
-  background: #e86d3c;
+  background: #E0997D;
   color: #fff;
   font-weight: 600;
   border-radius: 5px;
@@ -82,6 +82,10 @@ select {
   margin-right: 10px;
 }
 
+input[type="number"] {
+  color: rgb(70, 70, 70);
+}
+
 .slider {
   max-width: 197px;
 }
@@ -95,8 +99,84 @@ select {
   max-width: 91px;
 }
 
+input[type="range"] {
+  --c: #FA5412; /* active color */
+  --g: 7px; /* the gap */
+  --l: 3px; /* line thickness*/
+  --s: 14px; /* thumb size*/
+
+  height: var(--s); /* needed for Firefox*/
+  --_c: color-mix(in srgb, var(--c), #000 var(--p,0%));
+  -webkit-appearance :none;
+  -moz-appearance :none;
+  appearance :none;
+  background: none;
+  cursor: pointer;
+  overflow: hidden;
+}
+input:focus-visible,
+input:hover{
+  --p: 25%;
+}
+input:active,
+input:focus-visible{
+  --_b: var(--s)
+}
+/* chromium */
+input[type="range" i]::-webkit-slider-thumb{
+  height: var(--s);
+  aspect-ratio: 1;
+  border-radius: 50%;
+  box-shadow: 0 0 0 var(--_b,var(--l)) inset var(--_c);
+  border-image: linear-gradient(90deg,var(--_c) 50%,#ababab 0) 1/0 100vw/0 calc(100vw + var(--g));
+  clip-path:
+    polygon(
+       0     calc(50% + var(--l)/2),
+      -100vw calc(50% + var(--l)/2),
+      -100vw calc(50% - var(--l)/2),
+       0     calc(50% - var(--l)/2),
+       0 0,100% 0,
+       100%  calc(50% - var(--l)/2),
+       100vw calc(50% - var(--l)/2),
+       100vw calc(50% + var(--l)/2),
+       100%  calc(50% + var(--l)/2),
+       100% 100%,0 100%);
+  -webkit-appearance: none;
+  appearance: none;
+  transition: .3s;
+}
+/* Firefox */
+input[type="range"]::-moz-range-thumb {
+  height: var(--s);
+  width: var(--s);
+  background: none;
+  border-radius: 50%;
+  box-shadow: 0 0 0 var(--_b,var(--l)) inset var(--_c);
+  border-image: linear-gradient(90deg,var(--_c) 50%,#ababab 0) 1/0 100vw/0 calc(100vw + var(--g));
+  clip-path:
+    polygon(
+       0     calc(50% + var(--l)/2),
+      -100vw calc(50% + var(--l)/2),
+      -100vw calc(50% - var(--l)/2),
+       0     calc(50% - var(--l)/2),
+       0 0,100% 0,
+       100%  calc(50% - var(--l)/2),
+       100vw calc(50% - var(--l)/2),
+       100vw calc(50% + var(--l)/2),
+       100%  calc(50% + var(--l)/2),
+       100% 100%,0 100%);
+  -moz-appearance: none;
+  appearance: none;
+  transition: .3s;
+}
+@supports not (color: color-mix(in srgb,red,red)) {
+  input {
+    --_c: var(--c);
+  }
+}
+
 select {
-  background: #e86d3c;
+  background: #E0997D;
   color: #fff;
   max-width: 91px;
 }
@@ -138,11 +218,11 @@ select {
 
 .info {
   flex: 1;
-  color: black;
+  color: rgb(70, 70, 70);
 }
 
 .amount-total {
-  color: black;
+  color: rgb(70, 70, 70);
 }
 
 .total,
