--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -6,6 +6,7 @@
     </div>
   </a>
   <ul class="nav-links">
+    <li><a routerLink="/home">Home</a></li>
     <li><a routerLink="/loan-calculator">Simulation</a></li>
     <li><a routerLink="/about">About</a></li>
   </ul>
