--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -1,4 +1,6 @@
 <div class="home">
+    <img src="../../../assets/1.png" class="diagonal-image-top" />
+    <img src="../../../assets/2.png" class="diagonal-image-bottom" />
   <div class="container">
     <div class="left-side">
       <img
