--- a/src/app/views/loan-calculator/loan-calculator.component.css
+++ b/src/app/views/loan-calculator/loan-calculator.component.css
@@ -52,7 +52,7 @@ form {
   padding: 10px;
   margin: 10px;
   border: none;
-  background: #E0997D;
+  background: #e0997d;
   color: #fff;
   font-weight: 600;
   border-radius: 5px;
@@ -100,50 +100,53 @@ input[type="number"] {
 }
 
 input[type="range"] {
-  --c: #FA5412; /* active color */
+  --c: #fa5412; /* active color */
   --g: 7px; /* the gap */
   --l: 3px; /* line thickness*/
   --s: 14px; /* thumb size*/
 
   height: var(--s); /* needed for Firefox*/
-  --_c: color-mix(in srgb, var(--c), #000 var(--p,0%));
-  -webkit-appearance :none;
-  -moz-appearance :none;
-  appearance :none;
+  --_c: color-mix(in srgb, var(--c), #000 var(--p, 0%));
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
   background: none;
   cursor: pointer;
   overflow: hidden;
 }
 input:focus-visible,
-input:hover{
+input:hover {
   --p: 25%;
 }
 input:active,
-input:focus-visible{
-  --_b: var(--s)
+input:focus-visible {
+  --_b: var(--s);
 }
 /* chromium */
-input[type="range" i]::-webkit-slider-thumb{
+input[type="range" i]::-webkit-slider-thumb {
   height: var(--s);
   aspect-ratio: 1;
   border-radius: 50%;
-  box-shadow: 0 0 0 var(--_b,var(--l)) inset var(--_c);
-  border-image: linear-gradient(90deg,var(--_c) 50%,#ababab 0) 1/0 100vw/0 calc(100vw + var(--g));
-  clip-path:
-    polygon(
-       0     calc(50% + var(--l)/2),
-      -100vw calc(50% + var(--l)/2),
-      -100vw calc(50% - var(--l)/2),
-       0     calc(50% - var(--l)/2),
-       0 0,100% 0,
-       100%  calc(50% - var(--l)/2),
-       100vw calc(50% - var(--l)/2),
-       100vw calc(50% + var(--l)/2),
-       100%  calc(50% + var(--l)/2),
-       100% 100%,0 100%);
+  box-shadow: 0 0 0 var(--_b, var(--l)) inset var(--_c);
+  border-image: linear-gradient(90deg, var(--_c) 50%, #ababab 0) 1/0 100vw/0
+    calc(100vw + var(--g));
+  clip-path: polygon(
+    0 calc(50% + var(--l) / 2),
+    -100vw calc(50% + var(--l) / 2),
+    -100vw calc(50% - var(--l) / 2),
+    0 calc(50% - var(--l) / 2),
+    0 0,
+    100% 0,
+    100% calc(50% - var(--l) / 2),
+    100vw calc(50% - var(--l) / 2),
+    100vw calc(50% + var(--l) / 2),
+    100% calc(50% + var(--l) / 2),
+    100% 100%,
+    0 100%
+  );
   -webkit-appearance: none;
   appearance: none;
-  transition: .3s;
+  transition: 0.3s;
 }
 /* Firefox */
 input[type="range"]::-moz-range-thumb {
@@ -151,32 +154,35 @@ input[type="range"]::-moz-range-thumb {
   width: var(--s);
   background: none;
   border-radius: 50%;
-  box-shadow: 0 0 0 var(--_b,var(--l)) inset var(--_c);
-  border-image: linear-gradient(90deg,var(--_c) 50%,#ababab 0) 1/0 100vw/0 calc(100vw + var(--g));
-  clip-path:
-    polygon(
-       0     calc(50% + var(--l)/2),
-      -100vw calc(50% + var(--l)/2),
-      -100vw calc(50% - var(--l)/2),
-       0     calc(50% - var(--l)/2),
-       0 0,100% 0,
-       100%  calc(50% - var(--l)/2),
-       100vw calc(50% - var(--l)/2),
-       100vw calc(50% + var(--l)/2),
-       100%  calc(50% + var(--l)/2),
-       100% 100%,0 100%);
+  box-shadow: 0 0 0 var(--_b, var(--l)) inset var(--_c);
+  border-image: linear-gradient(90deg, var(--_c) 50%, #ababab 0) 1/0 100vw/0
+    calc(100vw + var(--g));
+  clip-path: polygon(
+    0 calc(50% + var(--l) / 2),
+    -100vw calc(50% + var(--l) / 2),
+    -100vw calc(50% - var(--l) / 2),
+    0 calc(50% - var(--l) / 2),
+    0 0,
+    100% 0,
+    100% calc(50% - var(--l) / 2),
+    100vw calc(50% - var(--l) / 2),
+    100vw calc(50% + var(--l) / 2),
+    100% calc(50% + var(--l) / 2),
+    100% 100%,
+    0 100%
+  );
   -moz-appearance: none;
   appearance: none;
-  transition: .3s;
+  transition: 0.3s;
 }
-@supports not (color: color-mix(in srgb,red,red)) {
+@supports not (color: color-mix(in srgb, red, red)) {
   input {
     --_c: var(--c);
   }
 }
 
 select {
-  background: #E0997D;
+  background: #e0997d;
   color: #fff;
   max-width: 91px;
 }
@@ -189,6 +195,16 @@ select {
   background: #e4e5e9;
   width: 100%;
 }
+
+.left-side {
+  animation: slideInFromTop 2s ease 0s 1 forwards;
+}
+
+
+.right-side {
+  animation: slideInFromBottom 2s ease 0s 1 forwards;
+}
+
 
 .card-top {
   height: auto;
@@ -207,7 +223,7 @@ select {
 }
 
 .small-circle.dark-red {
-  background: #FA5412;
+  background: #fa5412;
 }
 
 .row {
@@ -235,12 +251,7 @@ button.apply {
   width: 100%;
   height: 48px;
   padding: 10px;
-  background: linear-gradient(
-    45deg,
-    #dd8c6d 0%,
-    #e86d3c 50%,
-    #FA5412 100%
-  );
+  background: linear-gradient(45deg, #dd8c6d 0%, #e86d3c 50%, #fa5412 100%);
   color: #fff;
   box-shadow: 0px 3px 6px #00000033;
   border: none;
@@ -269,5 +280,23 @@ button.apply:hover {
 
   .slider {
     max-width: 148px;
+  }
+}
+
+@keyframes slideInFromTop {
+  0% {
+    transform: translateY(-100%);
+  }
+  100% {
+    transform: translateY(0);
+  }
+}
+
+@keyframes slideInFromBottom {
+  0% {
+    transform: translateY(100%);
+  }
+  100% {
+    transform: translateY(0);
   }
 }
