--- a/src/app/views/loan-calculator/loan-calculator.component.css
+++ b/src/app/views/loan-calculator/loan-calculator.component.css
@@ -42,7 +42,8 @@ form {
 
 .checkbox-group {
   display: flex;
-  flex-wrap: wrap;
+  flex-wrap: wrap;  
+  margin-top: 10px;
 }
 
 .ckb-loan-type {
@@ -69,6 +70,13 @@ form {
   flex-wrap: wrap;
   align-items: center;
   margin: 20px 0;
+}
+
+.error-message {
+  display: inline-flex;
+  color: #fa5412;
+  font-weight: bold;
+  margin-left: 8px;
 }
 
 input[type="number"],
@@ -199,7 +207,6 @@ select {
 .left-side {
   animation: slideInFromTop 2s ease 0s 1 forwards;
 }
-
 
 .right-side {
   animation: slideInFromBottom 2s ease 0s 1 forwards;
