--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,5 @@
+@import 'variables.css';
+
 * {
   margin: 0;
   padding: 0;
@@ -9,3 +11,4 @@
   font-weight: bold;
 }
 /* You can add global styles to this file, and also import other style files */
+
